--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 29
     buildToolsVersion "29.0.0"
     defaultConfig {
-        applicationId "com.example.on_covid_19"
+        applicationId "com.weid.on_covid_19"
         minSdkVersion 24
         targetSdkVersion 29
         versionCode 1
